--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,3 +12,11 @@ body {
     font-family: 'Lato', sans-serif;
     line-height: 1.5;
 }
+
+.main {
+    padding: 50px;
+}
+
+.table-name {
+    margin-bottom: 20px;
+}
